# dass-a3-food-manager

./: .gitignore  CMakeLists.txt  README.md
data/: basic_foods.json  basic_foods.txt  composite_foods.json  composite_foods.txt  daily_log.txt  profile_info.txt
src/: main.cpp
src/CLI/: CLIManager.cpp  CLIManager.h
src/Database/: DailyLog.cpp  DailyLog.h  FoodDatabase.cpp  FoodDatabase.h  FoodSource.h  JsonFoodSource.cpp  JsonFoodSource.h  TextFileFoodSource.cpp  TextFileFoodSource.h
src/Food/: BasicFood.cpp  BasicFood.h  CompositeFood.cpp  CompositeFood.h  Food.cpp  Food.h
src/User/: CalorieCalculationStrategy.h  DietProfile.cpp  DietProfile.h
src/cli/: cli_handler.cpp  cli_handler.h
